Refactor Dialog annotations: enhance return type documentation and support for lists, improve validation in DialogFactoryImp